# modal-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  README.md  SECURITY.md  compose.yaml  install.sh  mypy.ini  pyproject.toml  ruff.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  container.yml  release.yml  security.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
docs/: architecture.md  clients.md  examples.md  live-modal-semantics.md  self-hosting.md  threat-model.md  tools.md  troubleshooting.md
docs/adr/: 0001-claude-code-delegates-to-cli.md
docs/agents/: domain.md  issue-tracker.md
docs/plans/: 2026-04-17-local-read-only-readiness.md  2026-04-19-local-setup-and-agent-install.md  2026-05-14-annotation-based-policy.md  2026-05-14-deepen-normalize-py.md  2026-05-14-delete-stub-toolsets.md  2026-05-14-dry-toolset-registration.md  2026-05-14-extract-modal-rpc-client.md  2026-05-14-extract-ref-codec.md  2026-05-16-adapter-bootstrap-split.md  2026-05-16-claude-code-install-target.md  2026-05-16-collapse-cli-plumbing.md  2026-05-16-originguard-precompute.md  2026-05-16-policy-context.md  2026-05-16-restore-stdio-transport.md
docs/pre-mortem/: mm-9aeo-hosted-mutation-semantics.md
docs/reviews/: fastmcp-practitioner.md  findings-fastmcp-practitioner.md  findings-modal-integration-specialist.md  findings-security-engineer.md  modal-integration-specialist.md  security-engineer.md
docs/specs/: mcp-concept-de.md  mcp-concept-en.md  modal-mcp_v1.md  modal-mcp_v2.md
schema/: mcp-tools.v1.json
scripts/: capture_modal_fixtures.py  generate_schemas.py
src/modal_mcp/: __init__.py  __main__.py  agent_config.py  asgi.py  auth.py  config.py  doctor.py  server.py  setup.py  setup_files.py
src/modal_mcp/adapters/: _cli_fallback.py  base.py  capabilities.py  credentials.py  modal_adapter.py  registry.py
src/modal_mcp/agent_targets/: __init__.py  claude.py  claude_code.py  codex.py  contract.py
src/modal_mcp/cli/: __init__.py  _env.py  doctor.py  print_agent_config.py  run.py  setup.py  stdio.py
src/modal_mcp/domain/: __init__.py  envelope.py  errors.py  file_io.py  models.py  normalize.py  refs.py
src/modal_mcp/observability/: __init__.py  audit.py  logger.py  redact.py  tracing.py
src/modal_mcp/policy/: approval.py  audit.py  context.py  engine.py  rate_limit.py  rules.py
tests/: test_import.py
tests/contract/: test_fixture_replay.py  test_modal_symbols.py  test_schemas.py
tests/integration/: test_http_mcp.py  test_observability.py  test_security.py
tests/unit/: test_adapter_registry.py  test_agent_config_claude.py  test_agent_config_claude_code.py  test_agent_config_codex.py  test_agent_targets_claude.py  test_agent_targets_claude_code.py  test_agent_targets_codex.py  test_auth.py  test_cli_dispatch.py  test_cli_entrypoint.py  test_cli_fallback.py  test_codex_args_invariant.py  test_config.py  test_credentials.py  test_doctor.py  test_domain_file_io.py  test_domain_models.py  test_envelopes.py  test_errors.py  test_modal_adapter.py  test_normalize.py  test_policy.py  test_policy_context.py  test_redaction.py  test_refs.py  test_register_read_toolset.py  test_server.py  test_server_run.py  test_setup.py  test_setup_files.py  test_toolsets.py  test_tracing.py
(+14 files in other folders)
